chore: added name function to person package

--- a/scripts/create-function/templates/{{name}}/interfaces.ts.hbs
+++ b/scripts/create-function/templates/{{name}}/interfaces.ts.hbs
@@ -9,7 +9,7 @@ export interface {{pascalCase name}}GeneratorFunction {
    * Returns a random {{name}}.
    *
    * @param { {{pascalCase name}}Options} [options={}]
-   * @return { number }
+   * @return { {{returnType}} }
    * @example
    * // returns {{returnType}}
    * {{name}}()
