--- a/scripts/create-function/templates/{{name}}/interfaces.ts.hbs
+++ b/scripts/create-function/templates/{{name}}/interfaces.ts.hbs
@@ -6,7 +6,7 @@ export interface {{pascalCase name}}Options extends {{pascalCase packageName}}Op
 
 export interface {{pascalCase name}}GeneratorFunction {
   /**
-   * Returns a random {{name}}.
+   * {{description}}.
    *
    * @param { {{pascalCase name}}Options} [options={}]
    * @return { {{returnType}} }
